# cxx_py_bridge

./: CMakeLists.txt  README.md  pyproject.toml
include/: ffi.hpp
python/: ffi.py  setup.py
python/ffi.egg-info/: PKG-INFO  SOURCES.txt
python/project/_ffi/: __init__.py  ffi.py  registry.py  runtime_ctypes.py
python/project/dir/: _ffi_api.py  calls.py
python/project/others/: _ffi_api.py
src/: ffi.cpp  functions.cpp
